--- a/CallJavaApi/app/src/main/res/layout/activity_edit.xml
+++ b/CallJavaApi/app/src/main/res/layout/activity_edit.xml
@@ -30,9 +30,9 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/btnAdd"
+        android:id="@+id/btnEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add"/>
+        android:text="Update"/>
 
 </LinearLayout>
