--- a/CallJavaApi/app/src/main/res/layout/activity_detail.xml
+++ b/CallJavaApi/app/src/main/res/layout/activity_detail.xml
@@ -5,17 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:orientation="vertical">
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:weightSum="2">
     <Button
         android:id="@+id/btnEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit"/>
+        android:text="Edit"
+        android:layout_weight="1"/>
     <Button
         android:id="@+id/btnDel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Del"/>
+        android:text="Del"
+        android:layout_weight="1"/>
+</LinearLayout>
 
 <TextView
     android:id="@+id/view_first_name"
@@ -35,7 +42,4 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorAccent"
         android:text="Email"/>
-
-
-
 </LinearLayout>
