--- a/round-37/SqlietDbEx/app/src/main/res/layout/activity_main.xml
+++ b/round-37/SqlietDbEx/app/src/main/res/layout/activity_main.xml
@@ -126,5 +126,14 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:onClick="deleteProductByProductId" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ListView
+            android:id="@+id/listviews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ListView>
+    </LinearLayout>
 </LinearLayout>
 
