--- a/round-37/SqlietDbEx/app/src/main/res/layout/activity_main.xml
+++ b/round-37/SqlietDbEx/app/src/main/res/layout/activity_main.xml
@@ -125,10 +125,18 @@
             android:layout_weight="1"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:onClick="deleteProductByProductId" />
+        <Button
+            android:text="Edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/update"
+            android:layout_weight="1"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:onClick="updateProduct" />
     </LinearLayout>
     <LinearLayout
         android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ListView
             android:id="@+id/listviews"
