--- a/round-37/SqlietDbEx/app/src/main/res/layout/list.xml
+++ b/round-37/SqlietDbEx/app/src/main/res/layout/list.xml
@@ -7,12 +7,14 @@
     <TextView
         android:id="@+id/pid"
         android:text="0"
+        android:gravity="center"
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/name"
         android:text="Nokia"
+        android:gravity="center"
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -20,7 +22,8 @@
         android:id="@+id/qty"
         android:text="0"
         android:layout_weight="1"
-        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
