--- a/round-37/SqlietDbEx/app/src/main/res/layout/activity_main.xml
+++ b/round-37/SqlietDbEx/app/src/main/res/layout/activity_main.xml
@@ -140,6 +140,7 @@
         android:layout_height="wrap_content">
         <ListView
             android:id="@+id/listviews"
+            android:focusable="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></ListView>
     </LinearLayout>
