adroid.......update listview example

--- a/okay-menu-example/OptionsMenuEx3/app/src/main/res/menu/menu_main.xml
+++ b/okay-menu-example/OptionsMenuEx3/app/src/main/res/menu/menu_main.xml
@@ -10,16 +10,16 @@
     <item
         android:id="@+id/action_menu2"
         android:orderInCategory="100"
-        android:title="Menu 2"
+        android:title="About"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_menu3"
         android:orderInCategory="100"
-        android:title="Menu 3"
+        android:title="Team"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_menu4"
         android:orderInCategory="100"
-        android:title="Menu 3"
+        android:title="@string/menu_cancel"
         app:showAsAction="never" />
 </menu>
