--- a/okay-menu-example/MenuEx/app/src/main/res/layout/activity_main.xml
+++ b/okay-menu-example/MenuEx/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    tools:context=".MainActivity" >
+  android:orientation="vertical">
 
     <ListView
-        android:id="@+id/listView1ccccc"
+        android:id="@+id/listID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="66dp"
-        android:layout_marginTop="53dp" >
+        android:divider="@color/colorAccent"
+        android:dividerHeight="1dp">
+
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
